--- a/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
+++ b/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
@@ -1,30 +1,40 @@
 <div class="component-container kaczy-container">
     <div class="kaczy-content">
         <section>
-            <h1>
-                NewId - "Kaczy Brzeg"
-            </h1>
-            <p>
-                Transformacja jaką przeszła "Agroturystyka Kaczorek" była <strong>rewolucyjna.</strong> Na przestrzeni
-                niespełna roku czasu, wspólnie z właścicielami stworzyliśmy <i>(work in progress) </i> <strong>"Kaczy
-                    Brzeg".</strong>
-                Miejsce łączące naturalne piękno lokalizacji z prefesjonalną obsługą i bogatą paletą usług.
-            </p>
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'h1, p'" [appearIntersectionRatio]="0.3">
+                <h1>
+                    NewId - "Kaczy Brzeg"
+                </h1>
+                <p>
+                    Transformacja jaką przeszła "Agroturystyka Kaczorek" była <strong>rewolucyjna.</strong> Na
+                    przestrzeni
+                    niespełna roku czasu, wspólnie z właścicielami stworzyliśmy <i>(work in progress) </i>
+                    <strong>"Kaczy
+                        Brzeg".</strong>
+                </p>
+                <p>
+                    Miejsce łączące naturalne piękno lokalizacji z prefesjonalną obsługą i bogatą paletą usług.
+                </p>
+            </div>
+
             <div fxLayout="row wrap" fxLayoutAlign="center center">
                 <div fxFlex="40">
-                    <app-image-preload width="80%" alt="kaczy brzeg - logo" src="../../../../assets/projekty/kaczyBrzeg/KaczyBrzeg_signOnly_logo.png"></app-image-preload>
+                    <app-image-preload width="80%" alt="kaczy brzeg - logo"
+                        src="../../../../assets/projekty/kaczyBrzeg/KaczyBrzeg_signOnly_logo.png"></app-image-preload>
                 </div>
                 <div fxFlex="100" fxFlex.gt-sm="60">
-                    <div fxLayout="column" fxLayoutAlignt="space-around center">
-                        <div>
-                            Przez zmianę charakteru biznesu, nazwę, nową identyfikację wizualną, logotyp poprzez prowadzenie profili
+                    <div fxLayout="column" fxLayoutAlignt="space-around center" appAppearIntersectionFromBottom
+                        [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0.3">
+                        <p>
+                            Przez zmianę charakteru biznesu, nazwę, nową identyfikację wizualną, logotyp poprzez
+                            prowadzenie profili
                             społecznościowcyh bogatych w profesjonalne fotografie, grafiki, animacje, video...
-                        </div>
+                        </p>
                         <div>
                             <app-yt-player [id]="'Bd384WTfhDo'"></app-yt-player>
                         </div>
                     </div>
-    
+
                 </div>
             </div>
 
@@ -32,36 +42,54 @@
 
 
         <section>
-            <p>
-                Tworzenie ofert, prospektów, sugerowanie nowatorskich rozwiązań. Często to właśnie nasze pomysły stawały się
-                kluczowymi usługami/produktami identyfikującymi markę.
-            </p>
-            <div @brickList  fxLayout="row wrap" fxLayoutAlign="space-around center">
-                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30" src="../../../../assets/projekty/kaczyBrzeg/kaczybrzeg_18stka_Klaudia_thumbnail_1x1.jpg"
-                alt="KaczyBrzeg - impreza - 18stka w Kaczym Brzegu"></app-image-preload>
-    
-                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30" src="../../../../assets/projekty/kaczyBrzeg/kaczyBrzeg_reset_eko-ogrodek-100.jpg"
-                alt="KaczyBrzeg eko ogródek"></app-image-preload>
-    
-                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30" src="../../../../assets/projekty/kaczyBrzeg/kaczybrzeg_wesela_folder_2021.jpg"
-                alt="KaczyBrzeg folder weselny"></app-image-preload>
+
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="1">
+                <p>
+                    Tworzenie ofert, prospektów, sugerowanie nowatorskich rozwiązań. Często to właśnie nasze pomysły
+                    stawały się
+                    kluczowymi usługami/produktami identyfikującymi markę.
+                </p>
+
             </div>
-    
-            <p>
-                Naszym celem było sprawić by goście poczuli wartość dodaną do usług które otrzymywali...
-                Coś <strong>EXTRA,</strong> bez dodatkowych kosztów, coś co sprawia że jesteśmy zawsze o <strong>krok do
-                    przodu.</strong>
-            </p>
-            <p>
-                Imprezy integracyjne czy grupowy spływ kajakowy oprawione przez nas clipem video czy dodatkową grafiką stały
-                się znaczącym atutem miejsca, w bardzo konkurencyjnej branży/lokalizacji.
-            </p>
-            <p>
-                Przedstawiamy jak <strong>dobra atmosfera</strong> panuje na naszych imprezach,
-                oraz jak może wyglądać proponowana impreza (usługa/produkt) dla potencjalnych klientów. <br>
-                Wszystko stworzone w naturalnej atmosferze, bez <i>sztucznej ustawki.</i> Materiał video umiejętnie zbierany
-                by nie zakłócać prywatnego charakteru imprezy - tryb <span class="router-link">SHADOW.</span>
-            </p>
+
+            <div fxLayout="row wrap" fxLayoutAlign="space-around center">
+                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30"
+                    src="../../../../assets/projekty/kaczyBrzeg/kaczybrzeg_18stka_Klaudia_thumbnail_1x1.jpg"
+                    alt="KaczyBrzeg - impreza - 18stka w Kaczym Brzegu"></app-image-preload>
+
+                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30"
+                    src="../../../../assets/projekty/kaczyBrzeg/kaczyBrzeg_reset_eko-ogrodek-100.jpg"
+                    alt="KaczyBrzeg eko ogródek"></app-image-preload>
+
+                <app-image-preload class="img-container" fxFlex="100" fxFlex.gt-sm="30"
+                    src="../../../../assets/projekty/kaczyBrzeg/kaczybrzeg_wesela_folder_2021.jpg"
+                    alt="KaczyBrzeg folder weselny"></app-image-preload>
+            </div>
+
+
+
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0.3">
+                <p>
+                    Naszym celem było sprawić by goście poczuli wartość dodaną do usług które otrzymywali...
+                    Coś <strong>EXTRA,</strong> bez dodatkowych kosztów, coś co sprawia że jesteśmy zawsze o
+                    <strong>krok do
+                        przodu.</strong>
+                </p>
+                <p>
+                    Imprezy integracyjne czy grupowy spływ kajakowy oprawione przez nas clipem video czy dodatkową
+                    grafiką stały
+                    się znaczącym atutem miejsca, w bardzo konkurencyjnej branży/lokalizacji.
+                </p>
+                <p>
+                    Przedstawiamy jak <strong>dobra atmosfera</strong> panuje na naszych imprezach,
+                    oraz jak może wyglądać proponowana impreza (usługa/produkt) dla potencjalnych klientów. <br>
+                    Wszystko stworzone w naturalnej atmosferze, bez <i>sztucznej ustawki.</i> Materiał video umiejętnie
+                    zbierany
+                    by nie zakłócać prywatnego charakteru imprezy - tryb <span class="router-link">SHADOW.</span>
+                </p>
+            </div>
+
+
 
         </section>
 
@@ -75,11 +103,17 @@
                     <app-yt-player [id]="'HvAo07XkJTo'"></app-yt-player>
                 </div>
             </div>
-            <p>
-                Połączenie autorskiej motion grafik - <STRONG>PAMIĄTKA</STRONG> łączy zarówno przyjemny dla oka ślad po
-                imprezie jak i
-                angażuje do spontanicznego udostępniania, komentowania - generowania ruchu - promowania marki!
-            </p>
+
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="1">
+                <p>
+                    Połączenie autorskiej motion grafik - <STRONG>PAMIĄTKA</STRONG> łączy zarówno przyjemny dla oka ślad
+                    po
+                    imprezie jak i
+                    angażuje do spontanicznego udostępniania, komentowania - generowania ruchu - promowania marki!
+                </p>
+
+            </div>
+
             <div fxLayout="row wrap" fxLayoutAlign="space-around center">
                 <div fxFlex="98" fxFlex.gt-sm="47">
                     <app-yt-player [id]="'X3QQcERxMTE'"></app-yt-player>
@@ -88,29 +122,43 @@
                     <app-yt-player [id]="'56oG3UULatA'"></app-yt-player>
                 </div>
             </div>
-            <p>
-                Wszystkie te zabiegi mają na celu budowanie pozytywnego wizerunku<br>
-                Wizerunku profesjonalnej, ale też przede wszystkim firmy z własnym <strong>"ID"!</strong>
-            </p>
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="1">
+                <p>
+                    Wszystkie te zabiegi mają na celu budowanie pozytywnego wizerunku<br>
+                    Wizerunku profesjonalnej, ale też przede wszystkim firmy z własnym <strong>"ID"!</strong>
+                </p>
+
+            </div>
+
             <hr>
-            <h3>
-                Podsumowanie
-            </h3>
-            <p>
-                Nigdy nie chodzi o to by tylko <i>"zrobić video"</i> czy umieścić <i>profesjonalną fotkę</i>.. Jesteśmy
-                przekonani, że najistotniejszą rzeczą jest <strong>SZERSZY KONTEKST.</strong>
-            </p>
-            <p>
-                Dlatego nasze rozwiązania mają <strong>przewagę</strong> ponieważ nie tylko koncentrują się na pojedyńczych
-                aspektach, a <strong>przede wszystkim</strong> komponują i <strong>konsekwentnie REALIZUJĄ</strong>
-                działania
-                w spójnym celu.
-            </p>
-            <br>
-            <p>
-                Jeśli szukasz firmy która pomoże Tobie zrobić różnicę na rynku, podpowie co jeszcze można zrobić, jak
-                szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <span class="router-link" routerLink="/kontakt">dzwoń!</span>
-            </p>
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'h3, p'" [appearIntersectionRatio]="0.3">
+
+                <h3>
+                    Podsumowanie
+                </h3>
+                <p>
+                    Nigdy nie chodzi o to by tylko <i>"zrobić video"</i> czy umieścić <i>profesjonalną fotkę</i>..
+                    Jesteśmy
+                    przekonani, że najistotniejszą rzeczą jest <strong>SZERSZY KONTEKST.</strong>
+                </p>
+                <p>
+                    Dlatego nasze rozwiązania mają <strong>przewagę</strong> ponieważ nie tylko koncentrują się na
+                    pojedyńczych
+                    aspektach, a <strong>przede wszystkim</strong> komponują i <strong>konsekwentnie REALIZUJĄ</strong>
+                    działania
+                    w spójnym celu.
+                </p>
+                <br>
+                <p>
+                    Jeśli szukasz firmy która pomoże Tobie zrobić różnicę na rynku, podpowie co jeszcze można zrobić,
+                    jak
+                    szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <span class="router-link"
+                        routerLink="/kontakt">dzwoń!</span>
+                </p>
+
+            </div>
+
+
 
         </section>
 
@@ -119,24 +167,24 @@
 
 
         <section>
-            <div>
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'h6'" [appearIntersectionRatio]="1">
                 <h6>
-                    Oczywiście zachęcamy do odwiedzenia i polubienia/subs/follow profili <strong>Kaczy Brzeg</strong> na:
+                    Oczywiście zachęcamy do odwiedzenia i polubienia/subs/follow profili <strong>Kaczy Brzeg</strong>
+                    na:
                 </h6>
-                <div>
-                    <div>
-                        <a href="https://www.kaczyBrzeg.pl">www.kaczyBrzeg.pl</a>
-                    </div>
-                    <div>
-                        <a href="https://www.facebook.com/kaczyBrzeg">www.facebook.com/kaczyBrzeg</a>
-                    </div>
-                    <div>
-                        <a href="https://www.instagram.com/kaczyBrzeg">www.instagram.com/kaczyBrzeg</a>
-                    </div>
-                </div>
-    
             </div>
 
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'a'" [appearIntersectionRatio]="1">
+                <div>
+                    <a href="https://www.kaczyBrzeg.pl">www.kaczyBrzeg.pl</a>
+                </div>
+                <div>
+                    <a href="https://www.facebook.com/kaczyBrzeg">www.facebook.com/kaczyBrzeg</a>
+                </div>
+                <div>
+                    <a href="https://www.instagram.com/kaczyBrzeg">www.instagram.com/kaczyBrzeg</a>
+                </div>
+            </div>
         </section>
 
 
