--- a/src/app/sites/promocje/reklama-twojego-produktu/reklama-twojego-produktu.component.html
+++ b/src/app/sites/promocje/reklama-twojego-produktu/reklama-twojego-produktu.component.html
@@ -1,33 +1,54 @@
 <section>
-    <h1>
-        Reklama Twojego <i>Produktu</i>
-    </h1>
-    <h5>
-        Kompleksowa, profesjonalna kampania reklamowa w <strong>Google Ads, Instagram, Facebook</strong>
-    </h5>
+    <div appAppearIntersectionFromBottom [appearElementsToAnim]="'h1, h5'" [appearIntersectionRatio]="0.1">
+        <h1>
+            Reklama Twojego <i>Produktu</i>
+        </h1>
+        <h5>
+            Kompleksowa, profesjonalna kampania reklamowa w <strong>Google Ads, Instagram, Facebook</strong>
+        </h5>
+    </div>
 
 
     <div class="text-block">
-        Proponujemy gotowe rozwiązanie polegające na przygotowoaniu nietuzinkowej reklamy Twojej usługi,
-        <i>produktu</i>.<br />
-        Profesjonalne zdjęcia <i>produktu</i>, clipy video, animacje czy grafiki, <strong>WSZYSTKO</strong> co wprowadzi
-        <strong>świeżość</strong> i <strong>blask</strong> w wizerunku, poprawi postrzeganie Twojej marki.<br />
-        Planujesz zwiększyć sprzedaż, wypromować nową wersje <i>produktu</i> czy w końcu zwaloryzować cenę nie tracąc
-        klienta ? Mamy mnóstwo pomysłów by stworzyć i sktuecznie przeprowadzić kampanie reklamową która zreazluje
-        ustalone założenia.
+        <app-image-preload width="100%" alt="kaczy brzeg - logo"
+        src="../../../../assets/promocje/reklamaTwojegoProduktu/newId_product_box.png"></app-image-preload>
+    </div>
+
+
+    <div class="text-block" appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0.5">
+        <p>
+            Proponujemy gotowe rozwiązanie polegające na przygotowoaniu nietuzinkowej reklamy Twojej usługi,
+            <i>produktu</i>.<br />
+        </p>
+
+        <p>
+            Profesjonalne zdjęcia <i>produktu</i>, clipy video, animacje czy grafiki, <strong>WSZYSTKO</strong> co
+            wprowadzi
+            <strong>świeżość</strong> i <strong>blask</strong> w wizerunku, poprawi postrzeganie Twojej marki.
+        </p>
+        <p>
+            Planujesz zwiększyć sprzedaż, wypromować nową wersje <i>produktu</i> czy w końcu zwaloryzować cenę nie
+            tracąc
+            klienta ? Mamy mnóstwo pomysłów by stworzyć i sktuecznie przeprowadzić kampanie reklamową która zreazluje
+            ustalone założenia.
+        </p>
+
     </div>
 
 
 
     <div class="text-block">
-        <app-image-preload width="100%" alt="kaczy brzeg - logo"
-            src="../../../../assets/promocje/reklamaTwojegoProduktu/newId_product_box.png"></app-image-preload>
-        <div>
-            Indywidualnie tworzymy kontekts. <i>Produkt</i> ubieramy w ciekawe grafiki bazujące na najnowszych
-            światowych trendach. Video prezentacja połączona z unikatowymi animacjami, <strong>3d</strong> <br />
-            Wizerunkiem Tworzymy <strong>markę premium</strong>, co realnie przekłada się na sprzedaż.<br />
-            Materiały dostosujemy do platform na których są prezentowane by <strong>maksymalnie</strong> wykorzystać ich
-            potencjał.
+        <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0.5">
+            <p>
+                Indywidualnie tworzymy kontekts. <i>Produkt</i> ubieramy w ciekawe grafiki bazujące na najnowszych
+                światowych trendach. Video prezentacja połączona z unikatowymi animacjami, <strong>3d</strong>
+            </p>
+            <p>
+                Wizerunkiem Tworzymy <strong>markę premium</strong>, co realnie przekłada się na sprzedaż.<br />
+                Materiały dostosujemy do platform na których są prezentowane by <strong>maksymalnie</strong> wykorzystać
+                ich
+                potencjał.
+            </p>
         </div>
 
     </div>
