--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.css
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.css
@@ -6,7 +6,6 @@
     max-width: 1000px;
 }
 
-
 ul {
     font-size: smaller;
 }
@@ -57,6 +56,10 @@ li {
 
 .gotYourBack {
     padding: 2.5em;
+}
+
+.img-tarcza {
+    padding: 1.5em;
 }
 
 .msc {
