--- a/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
+++ b/src/app/sites/promocje/pakiet-start/pakiet-start.component.html
@@ -1,90 +1,93 @@
 <div class="component-container">
-    <section>
-        <div class="bg-4">
-            <div class="text-block">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
-                    <image x="0" y="0" width="100%" height="100%" xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg" preserveAspectRatio="xMidYMid meet"></image>
-                </svg>
-                <div class="pakiet-start-info">
-                    <p>
-                        Twoja nowo otwarta firma musi pojawić się w sieci a nie masz czasu się tym zająć ? 
-                    </p>
-                    <p>
-                        Proponujemy gotowe rozwiązanie dla zaczynających własna działalność!
-                    </p>
-                    <p>
-                        Wszystko co potrzebujesz by Twoja marka zaczęła pracować na Ciebie.
-                    </p>
-                </div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
-                    <image x="0" y="0" width="100%" height="100%" xlink:href="../../../../assets/svg/promocje/promocja-start/nowoczesny-profil.svg" preserveAspectRatio="xMidYMid meet"></image>
-                </svg>
-    
+    <section class="bg-4">
+        <div class="text-block">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%"
+                height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
+                <image x="0" y="0" width="100%" height="100%"
+                    xlink:href="../../../../assets/svg/promocje/promocja-start/pakiet-start.svg"
+                    preserveAspectRatio="xMidYMid meet"></image>
+            </svg>
+            <div class="pakiet-start-info" appAppearIntersectionFromBottom [appearElementsToAnim]="'p'">
+                <p>
+                    Twoja nowo otwarta firma musi pojawić się w sieci a nie masz czasu się tym zająć ?
+                </p>
+                <p>
+                    Proponujemy gotowe rozwiązanie dla zaczynających własna działalność!
+                </p>
+                <p>
+                    Wszystko co potrzebujesz by Twoja marka zaczęła pracować na Ciebie.
+                </p>
             </div>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%"
+                height="100%" viewBox="0 0 1080 1080" preserveAspectRatio="xMidYMid meet">
+                <image x="0" y="0" width="100%" height="100%"
+                    xlink:href="../../../../assets/svg/promocje/promocja-start/nowoczesny-profil.svg"
+                    preserveAspectRatio="xMidYMid meet"></image>
+            </svg>
         </div>
-    
-        
-        <div class="bg-2">
-            <div class="empty-line">&nbsp;</div>
-        </div>
+    </section>
 
+
+    <div class="bg-2">
+        <div class="empty-line">&nbsp;</div>
+    </div>
+
+
+    <section class="bg-3">
+        <div class="text-block pakiet-start-info">
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0">
+                <p>
+                    Skuteczne pozycjonowanie, odpowiednia domena, profesjonalnie przygotowane profile społecznościowe
+                    fb/insta.
+                </p>
+            </div>
+
+            <ul appAppearIntersectionFromBottom [appearElementsToAnim]="'li'" [appearIntersectionRatio]="0.3">
+                <li>profil firmowy google</li>
+                <li>google maps</li>
+                <li>profesjonalna poczta G-Suite</li>
+                <li>Pierwsza kampania reklamowa google</li>
+                <li>narzędzia do analizy i kontroli</li>
+                <li>firma w smartfonie</li>
+            </ul>
+            <div appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="1">
+                <p>
+                    Najważniejszym atutem tej oferty są przede wszystkim konstultacje; Informacje, skuteczne sugestie,
+                    zalecenia jak SAMODZIELNIE kontynuować pracę nad profilem.
+                </p>
+                <p>
+                    Potrzebujesz tylko narzędzi i odpowiednich wskazówek jak z nich korzystać ? <br />Ta oferta
+                    kierowana jest właśnie dla Ciebie!
+                </p>
+            </div>
+
+
+        </div>
 
     </section>
 
 
-    <section>
-        <div class="bg-3">
-            <div class="text-block pakiet-start-info">
-                    <p>
-                        Skuteczne pozycjonowanie, odpowiednia domena, profesjonalnie przygotowane profile społecznościowe fb/insta. 
-                    </p>
-                    <ul>
-                        <li>profil firmowy google</li>
-                        <li>google maps</li>
-                        <li>profesjonalna poczta G-Suite</li>
-                        <li>Pierwsza kampania reklamowa google</li>
-                        <li>narzędzia do analizy i kontroli</li>
-                        <li>firma w smartfonie</li>
-                    </ul>
-                    <p>
-                        Najważniejszym atutem tej oferty są przede wszystkim konstultacje; Informacje, skuteczne sugestie, zalecenia jak SAMODZIELNIE kontynuować pracę nad profilem. Potrzebujesz tylko narzędzi i odpowiednich wskazówek jak z nich korzystać ? <br/>Ta oferta kierowana jest właśnie dla Ciebie!
-                    </p>
+    <div class="bg-2">
+        <div class="empty-line">&nbsp;</div>
+    </div>
 
-            </div>
-        </div>
-    
-        <div class="bg-2">
-            <div class="empty-line">&nbsp;</div>
-        </div>
+    <section class="bg-1" appAppearIntersectionFromBottom [appearElementsToAnim]="'image'" [appearIntersectionRatio]="1">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%"
+            viewBox="0 0 1080 540" preserveAspectRatio="xMidYMid slice">
 
+            <image x="-450" y="-300" width="200%" height="200%"
+                xlink:href="../../../../assets/svg/newId_logo_white.svg"></image>
+            <image x="-1000" y="0" width="200%" height="200%"
+                xlink:href="../../../../assets/svg/promocje/promocja-start/strzalka.svg"></image>
+
+            <image class="pointer" routerLink="/promocje/pakiet-start-zamow" x="350" y="150" width="80%" height="80%"
+                xlink:href="../../../../assets/svg/promocje/promocja-start/cena_2000.svg"></image>
+        </svg>
     </section>
 
 
+    <div class="bg-4" appAppearIntersectionFromBottom [appearElementsToAnim]="'app-promocje-zadzwon'" [appearIntersectionRatio]="1">
+        <app-promocje-zadzwon routerLink="/promocje/pakiet-start-zamow"></app-promocje-zadzwon>
+    </div>
 
-
-
-    <section>
-        <div class="bg-1">
-            <div class="">
-                <div class="pakiet-start-info">
-    
-                </div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1080 540" preserveAspectRatio="xMidYMid slice">
-                    
-                    <image x="-450" y="-300" width="200%" height="200%" xlink:href="../../../../assets/svg/newId_logo_white.svg" ></image>
-                    <image x="-1000" y="0" width="200%" height="200%" xlink:href="../../../../assets/svg/promocje/promocja-start/strzalka.svg" ></image>
-                    
-                    <image class="pointer" routerLink="/promocje/pakiet-start-zamow" x="350" y="150" width="80%" height="80%" xlink:href="../../../../assets/svg/promocje/promocja-start/cena_2000.svg" ></image>
-                </svg>
-    
-            </div>
-            
-        
-        </div>
-    
-        <div class="bg-4">
-            <app-promocje-zadzwon routerLink="/promocje/pakiet-start-zamow"></app-promocje-zadzwon>
-        </div>
-    </section>
-    
 </div>
