--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    display: inline-block;
+    /* display: inline-block; */
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
+
 
 /* unvisited link */
 a {
@@ -59,6 +60,9 @@ body {
     /* font-family: Roboto, "Helvetica Neue", sans-serif;  */
 }
 
+section {
+    padding: 0.25em;
+}
 
 
 
@@ -98,6 +102,10 @@ body {
 
 .empty-line {
     height: 7px;
+}
+
+.full-height {
+    min-height: 100vh;
 }
 
 .header-footer-container {
@@ -189,22 +197,17 @@ body {
 }
 
 @media screen and (max-width: 900px)  {
-    p, ul {
+    /* p, ul {
         display: inline-block;
-    }
+    } */
 }
 
 @media screen and (min-width: 900px)  {
-    .text-block {
+    /* .text-block {
         column-count: 2;
         column-width: 465px;
         max-width: 960px;
         padding-top: 1em;
         padding-bottom: 1em;
-    }
-
-
-    
-   
-
+    } */
 }
