--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -2,7 +2,7 @@
 
   <section>
     <div class="not-found-info">
-      Pod adresem niczego nie przygotowaliśmy, sprawdź poprawność lub
+      Pod adresem niczego nie przygotowaliśmy, sprawdź poprawność lub..
     </div>
   </section>
   
