fix routerlink to a href

--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -7,9 +7,9 @@
   </section>
   
   <section>
-    <div class="router-link not-found-go-back" routerLink="/home">
+    <a class="router-link not-found-go-back" href="/home">      
       wróc do strony głównej
-    </div>
+    </a>
   </section>
 
 
