--- a/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
+++ b/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
@@ -152,8 +152,7 @@
                 <p>
                     Jeśli szukasz firmy która pomoże Tobie zrobić różnicę na rynku, podpowie co jeszcze można zrobić,
                     jak
-                    szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <span class="router-link"
-                        routerLink="/kontakt">dzwoń!</span>
+                    szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <a href="/kontakt"><span class="router-link">dzwoń!</span></a>
                 </p>
 
             </div>
