--- a/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -35,7 +35,7 @@
     <section>
         <div class="text-block">
             <div>
-                Wróć do informacji o <span class="router-link" routerLink="/promocje/pakiet-start"><strong>Pakiet Start</strong></span>
+                Wróć do informacji o <a href="/promocje/pakiet-start"><span class="router-link"><strong>Pakiet Start</strong></span></a>
             </div>
         </div>
     </section>
