--- a/src/app/sites/promocje/promocje/promocje.component.html
+++ b/src/app/sites/promocje/promocje/promocje.component.html
@@ -6,15 +6,20 @@
                     <mat-card-title>Reklama Twojego Produktu</mat-card-title>
                     <mat-card-subtitle>Kompleksowa kampania reklamowa Google/Facebook</mat-card-subtitle>
                 </mat-card-header>
-                <img routerLink="/promocje/reklama-twojego-produktu-facebook-google" mat-card-image
+                <a href="/promocje/reklama-twojego-produktu-facebook-google">
+                <img mat-card-image
                     src="../../../../assets/images/promocje/newId_reklama_Twojego_produktu.jpg"
                     alt="NewId - Kompleksowa Reklama Twojego Produktu">
+                </a>
+            
                 <mat-card-content>
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-flat-button color="warn" routerLink="/promocje/reklama-twojego-produktu-facebook-google">Zobacz
+                    <a href="/promocje/reklama-twojego-produktu-facebook-google">
+                    <button mat-flat-button color="warn">Zobacz
                         szczegóły</button>
+                    </a>
                 </mat-card-actions>
             </mat-card>
             <mat-card fxFlex.gt-sm="0 1 calc(50%-10px)">
@@ -22,15 +27,19 @@
                     <mat-card-title>Obsługa Marketingowa</mat-card-title>
                     <mat-card-subtitle>3msc by zrobić różnicę na rynku!</mat-card-subtitle>
                 </mat-card-header>
-                <img routerLink="/promocje/obsluga-marketingowa-3msc" mat-card-image
+                <a href="/promocje/obsluga-marketingowa-3msc">
+                <img mat-card-image
                     src="../../../../assets/images/promocje/newId_obsluga_marketingowa_3msc_1x1.png"
                     alt="NewId - Obsluga Marketingowa 3msc">
+                    </a>
                 <mat-card-content>
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-flat-button color="warn" routerLink="/promocje/obsluga-marketingowa-3msc">Zobacz
+                    <a href="/promocje/obsluga-marketingowa-3msc">
+                    <button mat-flat-button color="warn">Zobacz
                         szczegóły</button>
+                    </a>
                 </mat-card-actions>
             </mat-card>
 
@@ -40,13 +49,17 @@
                     <mat-card-title>Pakiet START</mat-card-title>
                     <mat-card-subtitle>Twoja firma w Internecie</mat-card-subtitle>
                 </mat-card-header>
-                <img routerLink="/promocje/pakiet-start" mat-card-image
+                <a href="/promocje/pakiet-start">
+                <img mat-card-image
                     src="../../../../assets/images/promocje/newId_pakietStart.png" alt="NewId - Paket Start">
+                    </a>
                 <mat-card-content>
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <button mat-flat-button color="warn" routerLink="/promocje/pakiet-start">Zobacz szczegóły</button>
+                    <a href="/promocje/pakiet-start">
+                    <button mat-flat-button color="warn">Zobacz szczegóły</button>
+                    </a>
                 </mat-card-actions>
             </mat-card>
         </div>
