fix remove href from a, add routerLink

--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -7,7 +7,7 @@
   </section>
   
   <section>
-    <a class="router-link not-found-go-back" href="/home">      
+    <a class="router-link not-found-go-back" routerLink="/home">      
       wróc do strony głównej
     </a>
   </section>
