--- a/src/app/sites/contact/contact/contact.component.html
+++ b/src/app/sites/contact/contact/contact.component.html
@@ -8,12 +8,12 @@
     <section>
         <p>Poznań, Bolka 2/81</p>
         <p>
-            <a href="tel:+48509229735">
+            <a routerLink="tel:+48509229735">
                 <span style="font-size: smaller;">+48</span>&nbsp;<span style="font-size: x-large;">509 229 735</span>
             </a>
         </p>
         <p>
-            <a href="mailto:info@newId.pl">
+            <a routerLink="mailto:info@newId.pl">
                 info@newId.pl
             </a>
         </p>
@@ -23,7 +23,7 @@
     <section>
         <div class="contact-footer">
             <h6>
-                Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a href="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a href="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
+                Pozostańmy w kontakcie, zapraszamy do polubienia/obserwowania naszch profili społecznościowych <a routerLink="https://facebook.com/newIdPl"><span><strong>FB/newIdPl</strong></span></a>&nbsp;|&nbsp;<a routerLink="https://instagram.com/newId.Pl"><span><strong>Insta/newId.pl</strong></span></a>
             </h6>
         </div>
     </section>
