--- a/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
+++ b/src/app/sites/projekty/kaczy-brzeg/kaczy-brzeg.component.html
@@ -152,7 +152,7 @@
                 <p>
                     Jeśli szukasz firmy która pomoże Tobie zrobić różnicę na rynku, podpowie co jeszcze można zrobić,
                     jak
-                    szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <a href="/kontakt"><span class="router-link">dzwoń!</span></a>
+                    szybciej/lepiej osiągnąć wyznaczone cele - oto jesteśmy! <a routerLink="/kontakt"><span class="router-link">dzwoń!</span></a>
                 </p>
 
             </div>
@@ -175,13 +175,13 @@
 
             <div appAppearIntersectionFromBottom [appearElementsToAnim]="'a'" [appearIntersectionRatio]="1">
                 <div>
-                    <a href="https://www.kaczyBrzeg.pl">www.kaczyBrzeg.pl</a>
+                    <a routerLink="https://www.kaczyBrzeg.pl">www.kaczyBrzeg.pl</a>
                 </div>
                 <div>
-                    <a href="https://www.facebook.com/kaczyBrzeg">www.facebook.com/kaczyBrzeg</a>
+                    <a routerLink="https://www.facebook.com/kaczyBrzeg">www.facebook.com/kaczyBrzeg</a>
                 </div>
                 <div>
-                    <a href="https://www.instagram.com/kaczyBrzeg">www.instagram.com/kaczyBrzeg</a>
+                    <a routerLink="https://www.instagram.com/kaczyBrzeg">www.instagram.com/kaczyBrzeg</a>
                 </div>
             </div>
         </section>
