--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
@@ -257,7 +257,7 @@
 
 
         <div class="img-container" appAppearIntersectionFromBottom [appearElementsToAnim]="'img'" [appearIntersectionRatio]="0.3">
-            <a href="/projekty/kaczyBrzeg">
+            <a routerLink="/projekty/kaczyBrzeg">
             <img width="100%" class="img-shadow pointer"
                 src="../../../../assets/projekty/kaczyBrzeg/newId_projekty_poznaj_kaczyBrzeg.jpg"
                 alt="Poznaj nasz przykładowy projekt - KaczyBrzeg">
@@ -271,12 +271,12 @@
 
         <div class="text-block" appAppearIntersectionFromBottom [appearElementsToAnim]="'p'" [appearIntersectionRatio]="0.3">
             <p>
-                <a href="/projekty/kaczyBrzeg"><span class="router-link">KaczyBrzeg</span></a> to przykład naszego
+                <a routerLink="/projekty/kaczyBrzeg"><span class="router-link">KaczyBrzeg</span></a> to przykład naszego
                 <strong>sposóbu myślenia.</strong> Do każdej marki podchodzimy <strong>indywidualnie.</strong>
                 W każdym przypadku szukamy <strong>unikatowych cech</strong> które eksponujemy w wyjątkowy sposób.
             </p>
             <p>
-                Jeśli jesteście zainteresowani współpracą, zapraszamy do <a href="/kontakt"><span class="router-link">kontaktu</span></a><br>
+                Jeśli jesteście zainteresowani współpracą, zapraszamy do <a routerLink="/kontakt"><span class="router-link">kontaktu</span></a><br>
                 Przekonaj się ze razem <strong>zrobimy różnicę na rynku!</strong>
             </p>
         </div>
@@ -286,7 +286,7 @@
 
 
     <section class="bg-3" appAppearIntersectionFromBottom [appearElementsToAnim]="'app-promocje-zadzwon'" [appearIntersectionRatio]="1">
-        <a href="/kontakt">
+        <a routerLink="/kontakt">
         <app-promocje-zadzwon></app-promocje-zadzwon>
         </a>
     </section>
