--- a/src/app/sites/promocje/promocje/promocje.component.html
+++ b/src/app/sites/promocje/promocje/promocje.component.html
@@ -6,7 +6,7 @@
                     <mat-card-title>Reklama Twojego Produktu</mat-card-title>
                     <mat-card-subtitle>Kompleksowa kampania reklamowa Google/Facebook</mat-card-subtitle>
                 </mat-card-header>
-                <a href="/promocje/reklama-twojego-produktu-facebook-google">
+                <a routerLink="/promocje/reklama-twojego-produktu-facebook-google">
                 <img mat-card-image
                     src="../../../../assets/images/promocje/newId_reklama_Twojego_produktu.jpg"
                     alt="NewId - Kompleksowa Reklama Twojego Produktu">
@@ -16,7 +16,7 @@
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <a href="/promocje/reklama-twojego-produktu-facebook-google">
+                    <a routerLink="/promocje/reklama-twojego-produktu-facebook-google">
                     <button mat-flat-button color="warn">Zobacz
                         szczegóły</button>
                     </a>
@@ -27,7 +27,7 @@
                     <mat-card-title>Obsługa Marketingowa</mat-card-title>
                     <mat-card-subtitle>3msc by zrobić różnicę na rynku!</mat-card-subtitle>
                 </mat-card-header>
-                <a href="/promocje/obsluga-marketingowa-3msc">
+                <a routerLink="/promocje/obsluga-marketingowa-3msc">
                 <img mat-card-image
                     src="../../../../assets/images/promocje/newId_obsluga_marketingowa_3msc_1x1.png"
                     alt="NewId - Obsluga Marketingowa 3msc">
@@ -36,7 +36,7 @@
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <a href="/promocje/obsluga-marketingowa-3msc">
+                    <a routerLink="/promocje/obsluga-marketingowa-3msc">
                     <button mat-flat-button color="warn">Zobacz
                         szczegóły</button>
                     </a>
@@ -49,7 +49,7 @@
                     <mat-card-title>Pakiet START</mat-card-title>
                     <mat-card-subtitle>Twoja firma w Internecie</mat-card-subtitle>
                 </mat-card-header>
-                <a href="/promocje/pakiet-start">
+                <a routerLink="/promocje/pakiet-start">
                 <img mat-card-image
                     src="../../../../assets/images/promocje/newId_pakietStart.png" alt="NewId - Paket Start">
                     </a>
@@ -57,7 +57,7 @@
 
                 </mat-card-content>
                 <mat-card-actions>
-                    <a href="/promocje/pakiet-start">
+                    <a routerLink="/promocje/pakiet-start">
                     <button mat-flat-button color="warn">Zobacz szczegóły</button>
                     </a>
                 </mat-card-actions>
