--- a/src/app/sites/menu/menu.component.html
+++ b/src/app/sites/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div fxFlex="27">
-        <a href="/home" routerLinkActive="active-menu-item">
+        <a routerLink="/home" routerLinkActive="active-menu-item">
             <svg class="menu-item" appPathLengthInfo [strokeBigPx]="2.5"
                 width="100%" height="100%" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 95 50">
@@ -26,7 +26,7 @@
 
 
     <div fxFlex="41">
-        <a href="/promocje" routerLinkActive="active-menu-item">
+        <a routerLink="/promocje" routerLinkActive="active-menu-item">
             <svg class="menu-item" appPathLengthInfo [strokeBigPx]="2.5"
                 [animDelay]="250" width="100%" height="100%" version="1.1" id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -58,7 +58,7 @@
         </div>
 
         <div fxFlex="32">
-            <a href="/kontakt" routerLinkActive="active-menu-item">
+            <a routerLink="/kontakt" routerLinkActive="active-menu-item">
                 <svg class="menu-item" appPathLengthInfo [strokeBigPx]="2.5"
                     [animDelay]="500" width="100%" height="100%" version="1.1" id="Layer_1"
                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
