--- a/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
+++ b/src/app/sites/promocje/pakiet-start-zamow/pakiet-start-zamow.component.html
@@ -16,7 +16,7 @@
                 <image x="35%" y="0" width="60%" height="60%" xlink:href="../../../../assets/svg/promocje/promocja-start/wykrzyknik.svg" preserveAspectRatio="xMidYMid meet"></image>
     
     
-                <a href="tel:509229735">
+                <a routerLink="tel:509229735">
                 <g>
                     <circle cx="50%" cy="1750" r="400" fill="#D92579"></circle>
                     <circle cx="50%" cy="1750" r="380" class="circle-fill"></circle>
@@ -35,7 +35,7 @@
     <section>
         <div class="text-block">
             <div>
-                Wróć do informacji o <a href="/promocje/pakiet-start"><span class="router-link"><strong>Pakiet Start</strong></span></a>
+                Wróć do informacji o <a routerLink="/promocje/pakiet-start"><span class="router-link"><strong>Pakiet Start</strong></span></a>
             </div>
         </div>
     </section>
