--- a/src/app/sites/promocje/reklama-twojego-produktu/reklama-twojego-produktu.component.html
+++ b/src/app/sites/promocje/reklama-twojego-produktu/reklama-twojego-produktu.component.html
@@ -57,4 +57,8 @@
         <app-yt-player [id]="'IIIgdZNxVaM'"></app-yt-player>
     </div>
 
+    <h1>
+        Spraw swojej Firmie prezent!
+    </h1>
+
 </section>
