--- a/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
+++ b/src/app/sites/promocje/obsluga-marketingowa3msc/obsluga-marketingowa3msc.component.html
@@ -1,3 +1,7 @@
+<div class="window-slider-container">
+    <app-window-slider></app-window-slider>
+</div>
+
 <div class="component-container text-white">
     <section class="bg-3">
         <div class="content-container">
